cabal-version: 3.0
name: letters-brick
version: 0.1

executable letters
  hs-source-dirs: src
  default-language: Haskell2010
  main-is: Letters.hs
  ghc-options: -O -threaded
  build-depends:
    base,
    brick,
    containers,
    optics,
    optparse-applicative,
    random,
    text,
    transformers,
    vector,
    vty
